--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = mcci-catena/MCCI LoRaWAN LMIC library@^4.1.1
+lib_deps = 
+	mcci-catena/MCCI LoRaWAN LMIC library@^4.1.1
+	paulstoffregen/Time@^1.6.1
